[WK2] TiledBackingStore: page contents is scaled wrongly https://bugs.webkit.org/show_bug.cgi?id=103090

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-11-25
Reviewed by Kenneth Rohde Christiansen.

Source/WebKit2:

Before this change the page contents scaling in PageViewportController was
defined all the times by m_rawAttributes.initialScale. If initial scale had not
been specified in the viewport meta tag it was set to m_minimumScaleToFit inside
PageViewportController::didChangeViewportAttributes().

The problem was that m_minimumScaleToFit could have wrong value as contents size
might have not be updated by the time PageViewportController::didChangeViewportAttributes()
was invoked.

The solution is to use m_minimumScaleToFit for contents scaling if initial scale
is not specified in the viewport meta tag, as it is updated all the time.
Also a flag m_initiallyFitToViewport is added to PageViewportController to detect
whether m_minimumScaleToFit should be used for scaling.

* UIProcess/PageViewportController.cpp:
(WebKit::PageViewportController::PageViewportController):
(WebKit::PageViewportController::didChangeContentsSize):
(WebKit::PageViewportController::pageTransitionViewportReady):
(WebKit::PageViewportController::didChangeViewportAttributes):
* UIProcess/PageViewportController.h:
(PageViewportController):

LayoutTests:

Added new layout test to verify that viewport 'width' descriptor does not
affect contents width of next loaded page.

* css3/device-adapt/resources/check-contents-width.html: Added.
* css3/device-adapt/viewport-width-not-affecting-next-page-expected.txt: Added.
* css3/device-adapt/viewport-width-not-affecting-next-page.html: Added.

Canonical link: https://commits.webkit.org/121329@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135669 268f45cc-cd09-0410-ab3c-d52691b4dbfc